# lemming

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .yarnrc.yml  Dockerfile.backend  Dockerfile.frontend  README.md  Staticfile  backend.env  default.conf  docker-compose.yml  mypy.ini  package.json  pip.conf  pyproject.toml
docs/: CONTRIBUTING.md
public/: index.html  manifest.json
scripts/: build-submodules.sh
server/: config.json  main.py  pyproject.toml  requirements.txt  schemas.py  server.py
server/data/: landmarks.json
server/data/HR Domain/: domain.pddl  plans.json  problem.pddl
server/data/HR Domain/plans/: sas_plan.1  sas_plan.10  sas_plan.11  sas_plan.12  sas_plan.13  sas_plan.14  sas_plan.15  sas_plan.16  sas_plan.17  sas_plan.18  sas_plan.19  sas_plan.2  sas_plan.20  sas_plan.21  sas_plan.22  sas_plan.23  sas_plan.24  sas_plan.25  sas_plan.26  sas_plan.27  sas_plan.28  sas_plan.29  sas_plan.3  sas_plan.30  sas_plan.31  sas_plan.32  sas_plan.33  sas_plan.34  sas_plan.35  sas_plan.36  sas_plan.37  sas_plan.38  sas_plan.39  sas_plan.4  sas_plan.40  sas_plan.41  sas_plan.42  sas_plan.43  sas_plan.44  sas_plan.45  (+32 more)
server/data/Toy Domain/: domain.pddl  plans.json  problem.pddl  prompt.json
server/data/Travel Approval/: domain.pddl  plans.json
server/data/Travel Approval/plans/: sas_plan.1  sas_plan.10  sas_plan.11  sas_plan.12  sas_plan.13  sas_plan.14  sas_plan.15  sas_plan.16  sas_plan.17  sas_plan.18  sas_plan.19  sas_plan.2  sas_plan.20  sas_plan.21  sas_plan.22  sas_plan.23  sas_plan.24  sas_plan.25  sas_plan.26  sas_plan.27  sas_plan.28  sas_plan.29  sas_plan.3  sas_plan.30  sas_plan.31  sas_plan.32  sas_plan.33  sas_plan.34  sas_plan.35  sas_plan.36  sas_plan.37  sas_plan.38  sas_plan.4  sas_plan.5  sas_plan.6  sas_plan.7  sas_plan.8  sas_plan.9
server/helpers/common_helper/: data_type_helper.py  exception_handler.py  file_helper.py  hash_helper.py  static_data_helper.py  str_helper.py
server/helpers/file_helper/: file_helper.py
server/helpers/graph_helper/: graph_helper.py
server/helpers/nl2plan_helper/: ltl2plan_helper.py  manage_formulas.py  nl2ltl_helper.py  utils.py
server/helpers/plan_disambiguator_helper/: build_flow_helper.py  plan_disambiguator_helper.py  selection_flow_helper.py
server/helpers/planner_helper/: planner_helper.py  planner_helper_data_types.py
server/planners/: base.py  symk.py  utils.py
server/planners/drivers/: forbid_iterative_planner_driver.py  landmark_driver.py  landmark_driver_datatype.py  planner_driver_datatype.py  planner_driver_helper.py  planner_drivers.py
server/simulator/: simulation_datatypes.py  simulation_runner.py  simulator.py
server/tests/data/graph/: example.dot  sample.dot
server/tests/data/pddl/: domain.pddl
server/tests/data/pddl/gripper/: plans.json
server/tests/data/pddl/travel/: problem.pddl
server/tests/helper/common_helper/: test_hash_helper.py  test_str_helper.py
server/tests/helper/graph_helper/: test_graph_helper.py
server/tests/helper/nl2plan_helper/: test_nl2plan_helper.py
server/tests/helper/plan_disambiguator_helper/: test_build_flow_helper.py  test_plan_disambiguator_helper.py  test_selection_flow_helper.py
server/tests/helper/planner_helper/: test_planner_helper.py
server/tests/simulator/: test_simulation_datatypes.py  test_simulation_runner.py  test_simulator_runner.py
src/: App.js  app.scss  config.json  index.js  index.scss
src/components/BasicElement/: BasicElement.js  BuildBackward.js  BuildForward.js  LandmarksView.js  NL2LTLIntegration.js  SelectView.js  _basic-element.scss  index.js
src/components/BasicElement/data/: ImportOptions.js
src/components/Info/: Info.js  _info.scss
src/content/LandingPage/: LandingPage.js  _landing-page.scss
src/server/: server.py
