[project]
name = "lemming"
version = "0.0.1"
authors = [
    { name = "Jung koo Kang", email = "jungkoo.kang@ibm.com" },
    { name = "Tathagata Chakraborti", email = "tchakra2@ibm.com" },
]
description = "Plan disambiguation using disjunctive action landmarks"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi==0.95.2",
    "forbiditerative==1.0.3",
    "pydantic==1.10.7",
    "requests==2.30.0",
    "pre-commit==3.3.1",
    "pytest==7.3.1",
    "black==22.3.0",
    "flake8==6.0.0",
    "coverage==7.2.5",
    "pylint==2.17.4",
    "click>=8.1.3",
    "pydot==1.4.2",
    "dacite==1.8.1",
    "graphviz==0.20.1",
    "networkx==3.1.0",
    "python-multipart==0.0.6",
    "uvicorn[standard] >=0.19.0",
    "plan4past @ git+https://github.com/whitemech/Plan4Past.git",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["server*"]

[project.urls]
"Homepage" = "https://github.ibm.com/Tathagata-Chakraborti1/lemming"
"Repository" = "https://github.ibm.com/Tathagata-Chakraborti1/lemming/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 80
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
